LibWeb: Add SVG style element
This change adds the style element to the SVG implementation. The
SVGStyleElement is copied code from the HTMLStyleElement because they
implement the same behavior but have a different class hirarchy and idl.

--- a/Base/res/html/misc/svg.html
+++ b/Base/res/html/misc/svg.html
@@ -5,13 +5,17 @@
     <style>
         .css {
             fill: magenta;
-            stroke: yellow;
-            stroke-width: 3;
         }
     </style>
 </head>
 <body>
 <svg width="800" height="1200">
+    <style>
+        .css {
+            stroke: yellow;
+            stroke-width: 3;
+        }
+    </style>
     <path d="M 10 10 h 100 l -50 80 z" fill="green" stroke="black" stroke-width="3"></path>
     <path d="M 60 10 h 100 l -50 80 z" fill="red" stroke="blue" stroke-width="3"></path>
     <path d="M 110 10 h 100 l -50 80 z" class="css"></path>
