Tests/LibWeb: Add a stroke+fill canvas test for unclosed path
Inspired by #25992. Canvas doesn't have an API that strokes and
fills at the same time, so this is arguably a less interesting
test.

I'm adding it because it still seems interesting testing filling an
unclosed path.  (Arguably it's weird that this mostly fill-related
test is in the canvas-stroke-styles test. But it's in paths.pdf,
and this is the moral equivalent of this file, and it doesn't really
fit in canvas-fillstyle-rgb.html either. So let's not overthink it.)

--- a/Tests/LibWeb/Screenshot/canvas-stroke-styles.html
+++ b/Tests/LibWeb/Screenshot/canvas-stroke-styles.html
@@ -150,4 +150,19 @@ for (let angle = 0; angle < 360; angle += 15) {
   ctx.stroke();
 }
 
+// Non-closed path, first filled, then stroked
+
+ctx.fillStyle = "gray";
+ctx.beginPath();
+ctx.moveTo(centerX - 30, centerY);
+ctx.lineTo(centerX, centerY + 30);
+ctx.lineTo(centerX + 30, centerY + 15);
+ctx.fill();
+
+ctx.beginPath();
+ctx.moveTo(centerX - 30, centerY);
+ctx.lineTo(centerX, centerY + 30);
+ctx.lineTo(centerX + 30, centerY + 15);
+ctx.stroke();
+
 </script>
