Tests: Port recent paths.pdf change to svg-stroke-styles.html
See commit description of commit c30188cd6aae46 for how to update
the reference image.

Follow-up to #25992.

--- a/Tests/LibWeb/Screenshot/svg-stroke-styles.html
+++ b/Tests/LibWeb/Screenshot/svg-stroke-styles.html
@@ -127,4 +127,8 @@ path:nth-of-type(3) {
             style="stroke-linecap: square" stroke-dashoffset="1" stroke-dasharray="2 2" stroke-width="1" />
   </g>
 
+  <!-- Triangle with missing side -->
+  <path d="M230,285 L250,270 L260,295" stroke="blue" fill="green"
+        style="stroke-width: 4" />
+
 </svg>
