Tests: Add path with two 'close' to paths.pdf / svg-stroke-styles.html
This would've caught a regression that a previous version of the next
commit had.

--- a/Tests/LibWeb/Screenshot/svg-stroke-styles.html
+++ b/Tests/LibWeb/Screenshot/svg-stroke-styles.html
@@ -63,8 +63,8 @@ path:nth-of-type(3) {
   <path d="M240,210 L270,250 L300,210 h-60" stroke="red"
         stroke-linecap="butt" fill="none" stroke-linejoin="bevel" />
 
-  <!-- Closed triangle, facing up. -->
-  <path d="M280,170 h60 L310,130 L280,170 Z" stroke="red"
+  <!-- Closed triangle, facing up. (Closed twice, in fact.) -->
+  <path d="M280,170 h60 L310,130 L280,170 Z Z" stroke="red"
         stroke-linecap="butt" fill="none" />
 
   <!-- Very short and wide line. -->
