Tests/LibWeb: Add SVG path with close followed by same point as move

--- a/Tests/LibWeb/Screenshot/svg-stroke-styles.html
+++ b/Tests/LibWeb/Screenshot/svg-stroke-styles.html
@@ -138,4 +138,10 @@ path:nth-of-type(3) {
         stroke="blue" fill="none" stroke-linejoin="round"
         style="stroke-width: 8"  />
 
+  <!-- A path where a 'close' is followed by a no-op move. -->
+  <path d="M175,185 L195,155 L215,185 L175,185 z
+           M175,185 L199,170"
+        stroke="blue" fill="none" stroke-linejoin="round"
+        style="stroke-width: 4"  />
+
 </svg>
