--- a/Base/var/www/index.html
+++ b/Base/var/www/index.html
@@ -44,7 +44,7 @@
     <main>
       <header>
         <img src="ladyball.png" />
-        <h1>Serenity WebServer Start Page!</h1>
+        <h1>SilkOS WebServer Start Page!</h1>
       </header>
       <p class="banner it-works">It works!</p>
       <hr />
